# hackrf

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  ACHIEVEMENTS_REPORT.md  BEFORE_AFTER_COMPARISON.md  CODE_OF_CONDUCT.md  COPYING  Dockerfile  END_TO_END_VALIDATION_REPORT.md  Jenkinsfile  MAYHEM_UNLOCK_ANALYSIS.md  Makefile  NEW_CAPABILITIES.md  README  Readme.md  SIGNAL_CATALOG.md  SYNC_START_DESIGN.md  TRADEMARK  UPSTREAM_PR_PREP.md  appveyor.yml  flashsize.h.in  format-code.ps1  format-code.sh  issue_template.md  kitspace.yaml
doc/: Readme.md  (+2 more)
firmware/: .gitignore  CMakeLists.txt  Makefile  README  appveyor.sh  dfu-util.cmake  dfu.py  hackrf-common.cmake  include-what-you-use.cmake  libopencm3.imp  platform-detect.cmake  toolchain-arm-cortex-m.cmake
firmware/blinky/: CMakeLists.txt  Makefile  README  blinky.c
firmware/blinky/.svn/: all-wcprops  entries
firmware/blinky_SPIFI_SRAM/: Makefile  blinky.c
firmware/blinky_rom_to_ram/: Makefile  README  blinky.c
firmware/cmake/: hackrf-common.cmake  toolchain-arm-cortex-m.cmake
firmware/common/: LPC4320_M4.ld  LPC4320_M4_memory.ld  LPC4320_M4_rom_to_ram.ld  LPC4330_M0.ld  LPC4330_M4.ld  LPC4330_M4_ROM_to_RAM.ld  LPC4330_M4_memory.ld  LPC4330_M4_ram_only.ld  LPC4330_M4_rom_to_ram.ld  LPC43xx_M0_memory.ld  LPC43xx_M4_Interrupts.c  LPC43xx_M4_M0_image_from_text.ld  LPC43xx_M4_M0_image_in_ram.ld  LPC43xx_M4_Startup.c  LPC43xx_M4_Startup_ROM_to_RAM.c  LPC43xx_M4_memory.ld  LPC43xx_M4_memory_rom_only.ld  Makefile_inc.mk  README  SIMD_DSP_INTEGRATION.md  adc.c  adc.h  bitband.c  bitband.h  clkin.c  clkin.h  clock_gen.c  clock_gen.h  clock_io.c  clock_io.h  configure_file.cmake  cpld_jtag.c  cpld_jtag.h  cpld_xc2c.c  cpld_xc2c.h  cpu_clock.c  cpu_clock.h  crc.c  crc.h  da7219.c  (+192 more)
firmware/common/rad1o/: decoder.c  decoder.h  display.c  display.h  draw.c  draw.h  fonts.h  print.c  print.h  render.c  render.h  smallfonts.c  smallfonts.h  ubuntu18.c  ubuntu18.h
firmware/common/xapp058/: README  lenval.c  lenval.h  micro.c  micro.h  ports.c  ports.h
firmware/cpld/: README
firmware/cpld/sgpio_debug/: Makefile  batch_svf  default.xsvf  sgpio_debug.xise  top.jed  top.ucf  top.vhd
firmware/cpld/sgpio_if/: Makefile  README.md  batch_xsvf  default.svf  default.xsvf  default_sync.xsvf  program  sgpio_if.xise  top.jed  top.ucf  top.vhd  top_tb.vhd
firmware/cpld/sgpio_if_passthrough/: README.md  program  sgpio_if_passthrough.xise
firmware/cpldjtagprog/: Makefile  cpldjtagprog.c  sgpio_if_xsvf.h
firmware/cpldjtagprog_rom_to_ram/: Makefile  README  cpldjtagprog_rom_to_ram.c
firmware/fpga/: board.py  build.py  requirements.txt
firmware/fpga/amaranth_future/: fixed.py
firmware/fpga/dsp/: cic.py  dc_block.py  fir.py  fir_mac16.py  mcm.py  mixer.py  nco.py  quarter_shift.py  round.py  sb_mac16.py
firmware/fpga/interface/: __init__.py  max586x.py  sgpio.py  spi.py
firmware/fpga/top/: ext_precision_rx.py  ext_precision_tx.py  half_precision.py  standard.py
firmware/fpga/util/: __init__.py  _stream.py  lfsr.py
firmware/hackrf_usb/: CMakeLists.txt  Makefile  Makefile_rom_to_ram  hackrf_usb.c  m0_state.c  m0_state.h  rf_path.c  rf_path.h  sgpio_isr.c  sgpio_isr.h  sgpio_m0.c  sgpio_m0.s  tuning.c  usb.c  usb.h  usb_api_adc.c  usb_api_adc.h  usb_api_board_info.c  usb_api_board_info.h  usb_api_cpld.c  usb_api_cpld.h  usb_api_dsp_simd.c  usb_api_dsp_simd.h  usb_api_firmware.c  usb_api_firmware.h  usb_api_m0_state.c  usb_api_m0_state.h  usb_api_mode.c  usb_api_mode.h  usb_api_operacake.c  usb_api_operacake.h  usb_api_praline.c  usb_api_praline.h  usb_api_radio.c  usb_api_radio.h  usb_api_register.c  usb_api_register.h  usb_api_scan.c  usb_api_scan.h  usb_api_selftest.c  (+27 more)
firmware/hackrf_usb_rom_to_ram/: Makefile
firmware/mixertx/: CMakeLists.txt  Makefile  README  mixertx.c
firmware/sgpio/: CMakeLists.txt  Makefile  README  sgpio.c  sgpio_test.c
firmware/sgpio-rx/: CMakeLists.txt  Makefile  README  sgpio-rx.c  table.py
firmware/sgpio_passthrough/: CMakeLists.txt  Makefile  sgpio_passthrough.c
firmware/sgpio_passthrough_rom_to_ram/: Makefile  README  Test_SGPIO0_to15.ods  Test_SGPIO_GPIO_mode_test_sgpio_interface.txt  sgpio_passthrough.c
firmware/simpletx/: CMakeLists.txt  Makefile  README  simpletx.c
firmware/spiflash/: CMakeLists.txt  Makefile  README  spiflash.c
firmware/startup/: CMakeLists.txt  Makefile  README  startup.c
firmware/startup_systick/: CMakeLists.txt  Makefile  startup_systick.c
firmware/startup_systick_perfo/: CMakeLists.txt  Makefile  README  perf_mips.c  result_exec_from_SPIFI.txt  result_exec_from_SRAM.txt  startup_systick.c
firmware/startup_systick_perfo_rom_to_ram/: Makefile  README  perf_mips.c  startup_systick.c
firmware/startup_systick_rom_to_ram/: Makefile  README  startup_systick.c
firmware/tools/: check_clock.py  cpld_bitstream.py  cpld_crc.py  dumb_crc32.py  dump_cgu.py  edit-font.py  make-dfu.py  test_simd_usb.py  xsvf.py
firmware/usb_performance/: Makefile  Makefile_rom_to_ram  usb.c  usb.h  usb_descriptor.c  usb_descriptor.h  usb_performance.c  usb_request.c  usb_request.h  usb_standard_request.c  usb_standard_request.h  usb_type.h
firmware/usb_performance_rom_to_ram/: Makefile
host/: CMakeLists.txt  README.md  vcpkg.json
host/cmake/: cmake_uninstall.cmake.in  hackrf-host.cmake  set_release.cmake
host/hackrf-tools/: 52-hackrf.rules  CMakeLists.txt  FindLIBHACKRF.cmake  Readme.md
host/libhackrf/: 52-hackrf.rules  53-hackrf.rules  53-hackrf.rules.in  CMakeLists.txt  HackRFConfig.cmake  Readme.md  cmake_uninstall.cmake.in  libhackrf.pc.in  vcpkg.json
host/misc/: CMakeLists.txt
host/python/: README.md  example1.py  example2.py  example3.py  example4.py  max2837_dump.py  pyhackrf.py  set_transceiver_mode.py
host/tests/: CMakeLists.txt  README.md  decode_fm.py  mock_libusb.c  mock_libusb.h  phased_array_demo.py  test_coherence.py  test_cpld_checksum.c  test_fpga_bitstream.c  test_fpga_bitstream_guard.py  test_hackrf_init.c  test_spiflash_clear.c  test_sync_start.py
host/usb_test/: Makefile  max2837_dump.py  usb_test.c
(+399 files in other folders)
